# vt-swap

./: .gitignore  Cargo.toml  NOTICE  README.md  build.rs
.github/workflows/: ci.yml  release.yml
examples/: inv.lib  inv.v  inv.vtswap
src/: emit.rs  engine.rs  job.rs  lib.rs  main.rs
tests/: vtswap.rs
