[package]
name = "vyges-vt-swap"
version = "0.0.1"
edition = "2021"
description = "STA-driven Vt swapping: trade threshold-voltage flavors (iso-footprint) to cut leakage while holding timing, or to close setup. Netlist in / netlist out."
license = "Apache-2.0"
authors = ["Vyges <https://vyges.com/contact>"]
homepage = "https://vyges.com"
repository = "https://github.com/vyges-tools/vt-swap"

# One dependency: the timing engine. vyges-sta-si re-exports the shared vyges-loom
# readers + design model (incl. per-cell leakage), so vt-swap needs no other deps.
[dependencies]
vyges-sta-si = { path = "../vyges-tools-sta-si" }

[[bin]]
name = "vyges-vt-swap"
path = "src/main.rs"

[lib]
name = "vyges_vt_swap"
path = "src/lib.rs"
